// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI Snapshots renders the text input UI snapshot correctly 1`] = `
<div
  className="css-0"
>
  <label
    className="css-0"
    htmlFor="myTextInput"
    id="myTextInput-label"
  >
    Custom Input Label
    <div
      className="css-0"
    >
      Required
    </div>
  </label>
  <input
    aria-required={true}
    className="chakra-input css-0"
    disabled={false}
    id="myTextInput"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Input Placeholder"
    required={true}
    step={null}
    type="text"
  />
</div>
`;

exports[`UI Snapshots renders the text input UI snapshot correctly 2`] = `
<div
  className="css-0"
>
  <label
    className="css-0"
    htmlFor="myTextInput"
    id="myTextInput-label"
  >
    Custom Input Label
    <div
      className="css-0"
    >
      Optional
    </div>
  </label>
  <input
    className="chakra-input css-0"
    disabled={false}
    id="myTextInput"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Input Placeholder"
    required={false}
    step={null}
    type="text"
  />
</div>
`;

exports[`UI Snapshots renders the text input UI snapshot correctly 3`] = `
<div
  className="css-0"
>
  <input
    aria-label="Custom Input Label"
    aria-required={true}
    className="chakra-input css-0"
    disabled={false}
    id="myTextInput"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Input Placeholder"
    required={true}
    step={null}
    type="text"
  />
</div>
`;

exports[`UI Snapshots renders the text input UI snapshot correctly 4`] = `
<div
  className="css-0"
>
  <label
    className="css-0"
    htmlFor="myTextInput"
    id="myTextInput-label"
  >
    Custom Input Label
    <div
      className="css-0"
    >
      Required
    </div>
  </label>
  <input
    aria-describedby="myTextInput-helperText"
    aria-required={true}
    className="chakra-input css-0"
    disabled={false}
    id="myTextInput"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Input Placeholder"
    required={true}
    step={null}
    type="text"
  />
  <div
    aria-atomic={true}
    aria-live="off"
    className=" css-0"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Custom helper text",
      }
    }
    data-isinvalid={false}
    id="myTextInput-helperText"
  />
</div>
`;

exports[`UI Snapshots renders the text input UI snapshot correctly 5`] = `
<div
  className="css-0"
>
  <label
    className="css-0"
    htmlFor="myTextInput"
    id="myTextInput-label"
  >
    Custom Input Label
    <div
      className="css-0"
    >
      Required
    </div>
  </label>
  <input
    aria-invalid={true}
    aria-required={true}
    className="chakra-input css-0"
    disabled={false}
    id="myTextInput"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Input Placeholder"
    required={true}
    step={null}
    type="text"
  />
  <div
    aria-atomic={true}
    aria-live="polite"
    className=" css-0"
    dangerouslySetInnerHTML={
      Object {
        "__html": "There is an error related to this field.",
      }
    }
    data-isinvalid={true}
    id="myTextInput-helperText"
  />
</div>
`;

exports[`UI Snapshots renders the text input UI snapshot correctly 6`] = `
<div
  className="css-0"
>
  <label
    className="css-0"
    htmlFor="myTextInput"
    id="myTextInput-label"
  >
    Custom Input Label
    <div
      className="css-0"
    >
      Required
    </div>
  </label>
  <input
    aria-required={true}
    className="chakra-input css-0"
    disabled={true}
    id="myTextInput"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Input Placeholder"
    required={true}
    step={null}
    type="text"
  />
</div>
`;

exports[`UI Snapshots renders the textarea UI snapshot correctly 1`] = `
<div
  className="css-0"
>
  <label
    className="css-0"
    htmlFor="myTextarea"
    id="myTextarea-label"
  >
    Custom textarea Label
    <div
      className="css-0"
    >
      Optional
    </div>
  </label>
  <textarea
    className="chakra-textarea css-0"
    disabled={false}
    id="myTextarea"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Textarea Placeholder"
    required={false}
    step={null}
  />
</div>
`;
